test_suite/tests/ui/rename/variant_unknown_rename_rule.stderr
error: unknown rename rule for #[serde(rename_all = "abc")]
 --> $DIR/variant_unknown_rename_rule.rs:6:26
  |
6 |     #[serde(rename_all = "abc")]
  |                          ^^^^^

error: aborting due to previous error

